# TransFile-TCP

./: CMakeLists.txt  README.md  docker-compose.yaml
client/: CMakeLists.txt  Dockerfile
client/src/: chat_client.cpp  chat_client.hpp  client.cpp  client.hpp  fc_client.cpp  fc_client.hpp  file_client.cpp  file_client.hpp  tcp_client.cpp
cmake-build/: Dockerfile
common/: CMakeLists.txt  Dockerfile
common/src/: common.cpp  common.hpp  constants.hpp  network_utils.hpp
protos/: chat.proto
server/: CMakeLists.txt  Dockerfile
server/src/: chat_server.cpp  chat_server.hpp  fc_server.cpp  fc_server.hpp  file_server.cpp  file_server.hpp  server.cpp  tcp_server.cpp  tcp_server.hpp
